update gateway: add grpc and roadrunner support
