# gateway/app/Http/Requests/UpdateTaskStatusRequest.php
@@ -1,0 +1,38 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+use OpenApi\Attributes as OA;
+use Illuminate\Support\Facades\Gate;
+
+#[OA\Schema(
+    schema: "UpdateTaskStatusRequest",
+    properties: [
+        new OA\Property(property: "name", type: "string", example: "Delayed"),
+    ]
+)]
+
+class UpdateTaskStatusRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return false;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => ['max:255'],
+        ];
+    }
+}
